--- a/splash.css
+++ b/splash.css
@@ -97,6 +97,7 @@ body {
   color:black;
   height:338px;
   width:308px;
+  padding-right: 10px;
 }
 #ijj8x{
   flex:0 1 auto;
@@ -241,6 +242,7 @@ body {
   color:black;
   width:37px;
   height:37px;
+  padding-right: 10px;
 }
 #izgf6{
   color:black;
